--- a/index.html
+++ b/index.html
@@ -17,15 +17,32 @@
         <!-- Quote  -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">One cannot and must not try to erase the past merely because it does not fit the present.</span>
+            <span id="quote"></span>
             <!-- Autthor -->
             <div class="quote-author">
-                <span id="author">Golda Mier</span>
+                <span id="author"></span>
             </div>
         </div>
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Tweet This!">
+              <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">
+                New Quote
+            </button>
+          
+             </div>
     </div>
    <!-- <i class="fad fa-laugh-wink"></i> -->
-   
+   <!-- Buttons -->
+   <!-- Loader -->
+   <div class="loader" id="loader">
+
+   </div> 
+
+
+  <!-- javascripts -->
     <script src="script.js"></script>
+    <script src="quotes.js"></script>
 </body>
 </html>
